# armazen

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  armazen.cabal
.github/workflows/: build_test.yml  c-cpp.yml
include/armazen/drain/: node.hpp  tree.hpp
include/armazen/utils/: tokens.hpp
src/: CMakeLists.txt  main.cpp
src/Data/Log/: Parser.hs  Types.hs
src/armazen/: example.cpp
src/armazen/drain/: node.cpp  tree.cpp
src/armazen/utils/: tokens.cpp
src/log_parser/: mod.rs
test/: Main.hs
test/Test/Data/Log/: Parser.hs
tests/: CMakeLists.txt  insert_test.cpp  main.cpp  utils_tokens_test.cpp
