cabal-version:      3.0
name:               armazen
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE.md
author:             Vitor Roque
maintainer:         vitor.roquep@gmail.com
-- copyright:
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

common extensions
  default-extensions:
    OverloadedStrings,
    DataKinds

library
    import:           warnings, extensions
    exposed-modules:  Data.Log.Parser,
                      Data.Log.Types
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1,
                      containers
    hs-source-dirs:   src
    default-language: Haskell2010

executable armazen
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.1,
        armazen

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite armazen-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    other-modules:  Test.Data.Log.Parser
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1,
        armazen,
        hspec
